
[package]
name = "listen-primitives"
version = "1.0.0"
authors = ["transxask <orwx71@163.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24'  }
sp-application-crypto = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

